# ssbot

./: .gitignore  CLAUDE.md  README.md  dependencies.repos  isaac_ros.md
scripts/: setup_ubuntu.sh
ssbot_behavior_tree/: CMakeLists.txt  package.xml
ssbot_behavior_tree/behavior_trees/: custom_navigate_through_poses.xml.btproj  navigate_path_through_poses.xml  navigate_path_through_poses_w_replanning.xml
ssbot_behavior_tree/include/ssbot_behavior_tree/bt_nodes/: wait_action.hpp
ssbot_behavior_tree/src/bt_nodes/: wait_action.cpp
ssbot_bringup/: CMakeLists.txt  package.xml
ssbot_bringup/config/: nanoscan3_front.yaml  nanoscan3_rear.yaml  nav2_params.yaml
ssbot_bringup/graphs/: route_graph.geojson
ssbot_bringup/launch/: bringup.launch.py  bringup_launch.py  gazebo.launch.py  gazebo_launch.py  localization_launch.py  nanoscan3.launch.py  navigation.launch.py  rviz_launch.py  slam_launch.py
ssbot_bringup/maps/: my_map.pgm  my_map.yaml
ssbot_bringup/params/: backpack_2d.lua  localization_2d.lua  nav2_params.yaml  ros_gz_bridge.yaml
ssbot_bringup/rviz/: default_view.rviz
ssbot_bringup/src/: map_saver.py  pose_saver.py  route_gui_commander.py  trajectory_starter.py
ssbot_bringup/test/: action_client.py  robot_monitor.py  service_client.py  waypoint_navigator.py
ssbot_bringup/worlds/: empty_with_sensors.sdf  slam_test.sdf  warehouse.sdf
ssbot_cartographer/: CMakeLists.txt  package.xml
ssbot_cartographer/config/: ssbot_2d.lua  ssbot_2d_localization.lua
ssbot_cartographer/launch/: cartographer.launch.py  localization.launch.py
ssbot_cartographer/ssbot_cartographer/: localization_monitor.py  pose_saver.py  trajectory_starter.py
ssbot_description/: CMakeLists.txt  package.xml
ssbot_description/config/: rviz.config.rviz
ssbot_description/launch/: description.launch.py  rviz.launch.py  view_robot.launch.py
ssbot_description/rviz/: gazebo_view.rviz
ssbot_description/urdf/: gazebo.xacro  ssbot.urdf.xacro
ssbot_msgs/: CMakeLists.txt  package.xml
